--- a/.gitignore
+++ b/.gitignore
@@ -6,8 +6,7 @@
 appsettings.json
 
 # 数据库，防止泄露隐私
-src/database/database.csv
-src/database/database copy.csv
+src/database/database*.csv
 
 # 登录信息，防止泄露我的隐私
 keystore.json
